top-banner added

--- a/Index.html
+++ b/Index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Robel Porfolio </title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcom To</h1>
+            <h1><span class="orange-color">Mohammad Robel </span> World!!! </h1>
+            <h3> Electrical engineering </h3>
+            <p>Electrical engineering is an engineering discipline concerned with the study, design, and application of
+                equipment, devices, and systems which use electricity, electronics, and electromagnetism.</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/"> HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/2.png" alt="">
+        </div>
+    </section>
+
 </body>
+
 </html>
