--- a/Index.html
+++ b/Index.html
@@ -26,6 +26,19 @@
             <img src="images/2.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/4.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Solid-state electronics</h1>
+            <h3>point-contact transistor</h3>
+            <p>The first working transistor was a point-contact transistor invented by John Bardeen and Walter Houser
+                Brattain while working under William Shockley at the Bell Telephone Laboratories (BTL) in 1947.</p>
+            <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+        </div>
+
+    </section>
 
 </body>
 
