--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcom To</h1>
             <h1><span class="orange-color">Mohammad Robel </span> World!!! </h1>
@@ -26,7 +26,7 @@
             <img src="images/2.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/4.png" alt="">
         </div>
@@ -39,6 +39,28 @@
         </div>
 
     </section>
+    <section class="experience-area">
+        <h1>Experience</h1>
+        <div class="flexible-container">
+            <div id="uuuuu" class="experience-item">
+                <h1>Power and Energy</h1>
+                <h3 class="orange-color"> Power engineering and Energy engineering</h3>
+                <p>Power & Energy engineering deals with the generation, transmission, and distribution of electricity
+                    as
+                    well as the design of a range of related devices.[72] These include transformers</p>
+            </div>
+            <div id="we-dev-experience" class="experience-item">
+                <h1>Control Engineering</h1>
+                <h3 class="orange-color"> Control engineering and Control theory</h3>
+                <p>Control engineering focuses on the modeling of a diverse range of dynamic systems and the design of
+                    controllers that will cause these systems to behave in the desired manner</p>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <p>Copyright © 2022 Programming-hero.com</p>
+    </footer>
 
 </body>
 
